# symboleditor

./: .kde-ci.yml  CMakeLists.txt  Doxyfile.in  Messages.sh  SymbolEditor.desktop  SymbolEditor.kcfg  SymbolEditor.kcfgc  SymbolEditor.qrc  SymbolEditor.xml  SymbolEditorui.rc  build.sh  hisc-apps-SymbolEditor.svgz  org.kde.SymbolEditor.appdata.xml  org.kde.SymbolEditor.desktop  snapcraft.yaml
doc/: CMakeLists.txt  commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  ui.docbook
doc/en/: commands.docbook  dialogs.docbook  introduction.docbook  symbols.docbook  ui.docbook
icons/: CMakeLists.txt
libraries/: kxstitch.sym
po/: CMakeLists.txt  ca.po  cs.po  en_GB.po  es.po  it.po
po/ar/: SymbolEditor.po
po/ast/: SymbolEditor.po
po/bs/: SymbolEditor.po
po/ca/: SymbolEditor.po
po/ca/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/ca@valencia/: SymbolEditor.po
po/cs/: SymbolEditor.po
po/da/: SymbolEditor.po
po/de/: SymbolEditor.po
po/de/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/en_GB/: SymbolEditor.po
po/eo/: SymbolEditor.po
po/es/: SymbolEditor.po
po/es/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/et/: SymbolEditor.po
po/et/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/eu/: SymbolEditor.po
po/fi/: SymbolEditor.po
po/fr/: SymbolEditor.po
po/ga/: SymbolEditor.po
po/gl/: SymbolEditor.po
po/he/: SymbolEditor.po
po/hi/: SymbolEditor.po
po/hu/: SymbolEditor.po
po/ia/: SymbolEditor.po
po/it/: SymbolEditor.po
po/it/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/ja/: SymbolEditor.po
po/ka/: SymbolEditor.po
po/ko/: SymbolEditor.po
po/lt/: SymbolEditor.po
po/lv/: SymbolEditor.po
po/nl/: SymbolEditor.po
po/nl/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/nn/: SymbolEditor.po
po/pl/: SymbolEditor.po
po/pt/: SymbolEditor.po
po/pt/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/pt_BR/: SymbolEditor.po
po/pt_BR/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/ru/: SymbolEditor.po
po/sa/: SymbolEditor.po
po/sk/: SymbolEditor.po
po/sl/: SymbolEditor.po
po/sl/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/sv/: SymbolEditor.po
po/sv/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/tr/: SymbolEditor.po
po/ug/: SymbolEditor.po
po/uk/: SymbolEditor.po
po/uk/docs/SymbolEditor/: commands.docbook  credits.docbook  dialogs.docbook  index.docbook  introduction.docbook  symbols.docbook  ui.docbook
po/zh_CN/: SymbolEditor.po
po/zh_TW/: SymbolEditor.po
src/: Commands.cpp  Commands.h  ConfigurationDialogs.cpp  ConfigurationDialogs.h  Editor.cpp  Editor.h  Exceptions.cpp  Exceptions.h  Main.cpp  MainWindow.cpp  MainWindow.h  Symbol.cpp  Symbol.h  SymbolLibrary.cpp  SymbolLibrary.h  SymbolListWidget.cpp  SymbolListWidget.h
ui/: EditorConfigPage.ui
